# ocx

./: .envrc  .gitattributes  .gitignore  .gitmodules  .licenserc.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  cliff.toml  cog.toml  deny.toml  dist-workspace.toml  ocx.toml  renovate.json  rust-toolchain.toml  taplo.toml  taskfile.yml
bazel/: .gitignore  MODULE.bazel
bazel/example/: MODULE.bazel  bazel-example
bazel/example/java/: BUILD.bazel  Main.java  run_multijdk.bzl  toolchain_ext.bzl
bazel/example/js/: BUILD.bazel
bazel/example/shell/: BUILD.bazel  smelly.sh
bazel/ocx/: defs.bzl  extension.bzl  extension_builder.bzl
bazel/ocx/private/: BUILD.bazel  external_image.bzl  platforms.bzl  providers.bzl
bazel/ocx/private/launcher/: BUILD.bazel  defs.bzl  launcher.cc  launcher.sh  main.cc
bazel/test/: BUILD.bazel  MODULE.bazel  test_run_cmake.sh  test_run_task.sh  test_run_uv.sh  test_task_platform_handling.sh
crates/ocx_cli/: Cargo.toml  build.rs
crates/ocx_cli/src/: api.rs  app.rs  command.rs  conventions.rs  error_envelope.rs  main.rs  options.rs  stdout.rs
crates/ocx_cli/tests/: linux_self_contained.rs  macos_self_contained.rs
crates/ocx_lib/: Cargo.toml
crates/ocx_lib/src/: archive.rs  auth.rs  ci.rs  cli.rs  codesign.rs  compression.rs  config.rs  env.rs  error.rs  file_lock.rs  file_structure.rs  hardlink.rs  lib.rs  log.rs  managed_config.rs  media_type.rs  oci.rs  package.rs  package_manager.rs  patch.rs  profile.rs  project.rs  publisher.rs  reference_manager.rs  reflink.rs  script.rs  setup.rs  shell.rs  shim.rs  symlink.rs  trust.rs  utility.rs
crates/ocx_lib/test/: data.rs  env.rs  fixtures.rs  mod.rs
crates/ocx_shim/: Cargo.toml
crates/ocx_shim/src/: chkstk.rs  core.rs  main.rs
test/: .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml  taskfile.yml  test-install.sh  zot-config.json
test/bench/: README.md  __init__.py  baseline.json  baseline.py  compare.py  conftest.py  harness.py  report.py  scenarios.py
test/bench/dashboard/: template.html
test/doc_scripts/: deps-flat.sh  deps-why.sh  deps.sh  entry-points__example-install.sh  entry-points__example-select.sh  entry-points__path-integration.sh  getting-started__env-multi.sh  getting-started__env.sh  getting-started__exec-multi.sh  getting-started__exec.sh  getting-started__find-candidate.sh  getting-started__install-select.sh  getting-started__install.sh  getting-started__project-toolchain.sh  getting-started__uninstall.sh  index.sh  package-cascade.sh  package-create.sh  package-describe.sh  package-layer-reuse.sh  package-multi-platform.sh  package-push.sh  package-test.sh  patches__consumer.sh  patches__maintainer.sh  select-deselect.sh  user-guide__ci-oci.sh  user-guide__ci-project.sh  user-guide__config-setup.sh  user-guide__deps-exec.sh  user-guide__deps-pull.sh  user-guide__direnv.sh  user-guide__exec-once.sh  user-guide__fresh-clone.sh  user-guide__global-add.sh  user-guide__global-env.sh  user-guide__global-manage.sh  user-guide__install.sh  user-guide__isolation.sh  user-guide__login.sh  (+14 more)
test/docker/: shells.Dockerfile  shells.alpine.Dockerfile
test/manual/: .gitignore  PATCHES.md  README.md  completions-testing.md  run-windows-activation.sh  test-windows-activation.ps1
test/manual/adversarial/: README.md
test/manual/scripts/: _lib.sh  bootstrap.sh  env.sh  setup-patches.sh  teardown-patches.sh  teardown.sh
test/recordings/: cast_layer.py  cast_recorder.py  cast_to_gif.py  conftest.py  setups.py  test_cast_realign.py  test_recordings.py  test_truncate_digests.py
test/recordings/scripts/: deps-flat.sh  deps-why.sh  deps.sh  env-multi.sh  env.sh  exec-multi.sh  exec.sh  find-candidate.sh  index.sh  install-select.sh  install.sh  package-cascade.sh  package-create.sh  package-describe.sh  package-layer-reuse.sh  package-multi-platform.sh  package-push.sh  package-test.sh  profile.sh  select-deselect.sh  shell-env.sh  uninstall.sh  variants.sh
test/scenarios/: README.md
test/scenarios/exec/: diamond-dep-env.sh  multi-entrypoint.sh  multi-layer-exec.sh  three-level-dep-env.sh  transitive-dep-env.sh
test/scenarios/offline/: find-fails-when-not-installed.sh  install-then-offline-exec.sh  install-then-offline-find.sh  install-then-offline-which.sh  reinstall-after-clean-and-purge.sh  reinstall-after-purge-multi-layer.sh  reinstall-after-purge-with-deps.sh  reinstall-after-purge.sh  reinstall-fails-when-cache-purged.sh  which-fails-when-not-installed.sh
test/scenarios/package-push/: single-layer-new.sh
test/scenarios/package-test/: happy-path-single-layer.sh  keep-tempdir.sh
test/scenarios/smoke/: basic-package-install-and-exec.sh  no-scenario-inline-ocx.sh
test/scripts/: doc_scripts_list.py
test/src/: __init__.py  assertions.py  doc_binding.py  doc_scripts.py  helpers.py  registry.py  runner.py  shell_eval.py  state_providers.py  static_index.py
test/src/scenarios/: __init__.py  basic.py  diamond_deps.py  multi_entrypoints.py  multi_layer.py  three_level_deps.py  two_level_deps.py
test/tests/: conftest.py  test_assembly.py  test_auto_verify.py  test_bench_smoke.py  test_cascade.py  test_ci_export.py  test_clean.py  test_clean_audit_log.py  test_clean_concurrency.py  test_clean_network_fs.py  test_clean_project_backlinks.py  test_clean_shared_store.py  test_color.py  test_completion_ascii.py  test_config.py  test_config_push.py  test_config_setup.py  test_cross_platform_materialize.py  test_cross_repo_dedup.py  test_dependencies.py  test_deps_interpolation.py  test_describe.py  test_direnv.py  test_doc_binding.py  test_doc_command_reference.py  test_doc_project_toolchain.py  test_doc_scripts.py  test_doc_scripts_cast.py  test_doc_scripts_executor.py  test_doc_scripts_one_tree.py  test_doc_scripts_parser.py  test_doc_scripts_publish.py  test_entry_points.py  test_entry_points_crossplat.py  test_entrypoints.py  test_entrypoints_crossplat.py  test_env.py  test_exec.py  test_exec_compose.py  test_exec_forwarding.py  (+92 more)
test/tests/fixtures/: __init__.py  fake_sigstore.py
(+1263 files in other folders)
