[workspace]
resolver = "3"
members = ["crates/ocx_cli", "crates/ocx_lib", "crates/ocx_mirror", "crates/ocx_schema"]
# The submodule is pulled in via [patch.crates-io] below; excluding it here
# lets `cargo` commands run directly inside `external/rust-oci-client/` (for
# the fork's own test suite) without the outer workspace claiming ownership.
exclude = ["external/rust-oci-client", "external/docker_credential"]

[workspace.package]
version = "0.2.1"
license = "Apache-2.0"
description = "The simple package manager"
repository = "https://github.com/ocx-sh/ocx"
homepage = "https://ocx.sh"

[patch.crates-io]
oci-client = { path = "external/rust-oci-client" }
docker_credential = { path = "external/docker_credential" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
ocx_lib = { path = "crates/ocx_lib" }
tokio = { version = "1", features = ["full"] }
serde_yaml_ng = "0.10"

# Embedded Starlark interpreter for `ocx package test --script`.
#
# DELIBERATE EXACT PIN (deviation from this repo's caret-version convention):
# starlark-rust does NOT promise API stability between releases. Every bump is
# treated as a breaking change requiring a manual review pass (and re-running
# the engine-isolation test). The whole family is co-versioned and must move
# together. See .claude/rules/subsystem-deps.md "Manually-tracked exact pins".
starlark = "=0.13.0"
starlark_lsp = "=0.13.0"
starlark_syntax = "=0.13.0"
starlark_map = "=0.13.0"
starlark_derive = "=0.13.0"

[workspace.lints.clippy]
# Placeholder for future workspace-wide clippy overrides. Crate-specific
# overrides belong in each crate's own [lints.clippy] section so the
# scope is explicit. Kept empty so `[lints] workspace = true` in crate
# manifests continues to resolve.
