[workspace]
resolver = "3"
members = ["crates/ocx_cli", "crates/ocx_lib", "crates/ocx_mirror", "crates/ocx_schema", "crates/ocx_shim"]
# The submodule is pulled in via [patch.crates-io] below; excluding it here
# lets `cargo` commands run directly inside `external/rust-oci-client/` (for
# the fork's own test suite) without the outer workspace claiming ownership.
exclude = ["external/rust-oci-client", "external/docker_credential"]

[workspace.package]
version = "0.2.1"
license = "Apache-2.0"
description = "The simple package manager"
repository = "https://github.com/ocx-sh/ocx"
homepage = "https://ocx.sh"

[patch.crates-io]
oci-client = { path = "external/rust-oci-client" }
docker_credential = { path = "external/docker_credential" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Size-tuned profile for the committed Windows shim blob (crates/ocx_shim,
# issue #66). A dedicated profile (not a per-crate `release` override, which
# Cargo does not support) keeps every other crate's `release`/`dist` build
# untouched. Build the blob with:
#   cargo xwin build -p ocx_shim --profile shim --target x86_64-pc-windows-msvc
#   cargo xwin build -p ocx_shim --profile shim --target aarch64-pc-windows-msvc
# then commit the stripped bytes + record the SHA-256 (see crates/ocx_lib/
# src/shim.rs refresh-PR comment).
[profile.shim]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[workspace.dependencies]
ocx_lib = { path = "crates/ocx_lib" }
tokio = { version = "1", features = ["full"] }
serde_yaml_ng = "0.10"

[workspace.lints.clippy]
# Placeholder for future workspace-wide clippy overrides. Crate-specific
# overrides belong in each crate's own [lints.clippy] section so the
# scope is explicit. Kept empty so `[lints] workspace = true` in crate
# manifests continues to resolve.
