[workspace]
resolver = "3"
members = ["crates/ocx_cli", "crates/ocx_lib", "crates/ocx_schema", "crates/ocx_shim"]
# The submodule is pulled in via [patch.crates-io] below; excluding it here
# lets `cargo` commands run directly inside `external/rust-oci-client/` (for
# the fork's own test suite) without the outer workspace claiming ownership.
exclude = ["external/rust-oci-client", "external/docker_credential"]

[workspace.package]
version = "0.4.2"
license = "Apache-2.0"
description = "The simple package manager"
repository = "https://github.com/ocx-sh/ocx"
homepage = "https://ocx.sh"

[patch.crates-io]
oci-client = { path = "external/rust-oci-client" }
docker_credential = { path = "external/docker_credential" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# Symbols are useless in release assets (user backtraces are unsymbolized
# anyway) and cost ~9 MB binary / ~1.7 MB archive. cargo-auditable's .dep-v0
# section survives a symbol strip.
strip = "symbols"

# Size-tuned profile for the committed Windows shim blob (crates/ocx_shim,
# issue #66). A dedicated profile (not a per-crate `release` override, which
# Cargo does not support) keeps every other crate's `release`/`dist` build
# untouched. Build the blob with:
#   cargo xwin build -p ocx_shim --profile shim --target x86_64-pc-windows-msvc
#   cargo xwin build -p ocx_shim --profile shim --target aarch64-pc-windows-msvc
# then commit the stripped bytes + record the SHA-256 (see crates/ocx_lib/
# src/shim.rs refresh-PR comment).
[profile.shim]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[workspace.dependencies]
# Internal crates
ocx_lib = { path = "crates/ocx_lib" }

# Async runtime
tokio = { version = "1.52", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.32"

# Serde + formats
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_json_canonicalizer = "0.3.2"
serde_repr = "0.1.20"
serde_yaml_ng = "0.10.0"
toml = "1.1.2"

# CLI
clap = { version = ">=4.5.57, <5", features = ["derive", "color"] }
clap_builder = "4.6"
clap_complete = "4.6.5"
anyhow = "1.0.102"
thiserror = "2.0.18"

# Tracing
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "std", "fmt", "json", "registry"] }

# OCI / HTTP
oci-client = "0.17"
# Mozilla CA roots compiled into the binary so TLS works without a system
# trust store (minimal container / CI runner without ca-certificates).
webpki-root-certs = "1"

# Crypto / encoding
sha2 = "0.11.0"
hex = "0.4.3"
base64 = "0.22.1"
secrecy = "0.10.3"
docker_credential = "1.3"
rpassword = "7.5.3"

# Compression / archive
flate2 = "1.1.9"
tar = "0.4.46"
lzma-rust2 = "0.16.3"
# Sync zstd encode/decode for tar+zstd layers (OCI 1.1). `zstdmt` enables the
# multi-threaded encoder (`Encoder::multithread`), giving compression-side
# parallelism parity with the xz `XzWriterMt` path. Decode stays single-threaded
# (matches the xz decode path). BSD-3-Clause + MIT/Apache — in the allowlist.
zstd = { version = "0.13", features = ["zstdmt"] }
zip = { version = "8.6", default-features = false, features = ["deflate"] }
# Async XZ/gzip decoding for the streaming pull pipeline (Phase 3).
# Requires `tokio` feature for AsyncRead-based decoders.
# New transitive dep `liblzma` via `compression-codecs`: CVE-2025-31115 affects
# `lzma_stream_decoder_mt` (multithreaded path only); OCX uses `XzDecoder`
# (single-threaded), so the vulnerable code path is never reached. If `cargo
# deny` flags the advisory, add an ignore entry to deny.toml citing this
# rationale. Verified bundled XZ version ≥ 5.8.1 in async-compression ≥ 0.4.38.
async-compression = { version = "0.4.42", default-features = false, features = ["tokio", "xz", "gzip", "zstd"] }
# Direct edge on `liblzma` (already pulled transitively by async-compression's
# `xz` feature) purely to enable its `static` feature. Without it, liblzma-sys's
# build script pkg-config-probes for a host liblzma and links it *dynamically*
# when found (e.g. homebrew's liblzma.5.dylib on the macOS CI runner), baking an
# absolute `/opt/homebrew/...` path into the Mach-O so `ocx` won't start on a
# stock Mac. `static` forces liblzma-sys to compile & static-link the vendored
# xz on every host, keeping the binary self-contained. Link-config only — not
# referenced from Rust code (see the phantom dep in crates/ocx_lib/Cargo.toml).
liblzma = { version = "0.4", default-features = false, features = ["static"] }
# SyncIoBridge for bridging AsyncRead → sync Read at the spawn_blocking boundary
# in Client::pull_layer. New direct dep — confirmed absent from workspace before
# this addition (grep 2026-06-12, 0 matches).
tokio-util = { version = "0.7", default-features = false, features = ["io", "io-util"] }

# Filesystem
tempfile = "3.27.0"
fs4 = { version = "0.13", features = ["sync"] }
symlink = "0.1.0"
dunce = "1.0.5"
dirs = "6.0.0"
which = "8.0.2"
glob = "0.3"

# Data structures + utility
bytes = "1.11.1"
indexmap = "2.14.0"
regex = "1.12.3"
chrono = "0.4.44"
schemars = "1.2.1"

# Terminal / UI
console = "0.16.3"
colored_json = "5.0.0"
indicatif = { version = "0.18.4", features = ["tokio"] }

# System info
sysinfo = "0.39.2"

# Platform
libc = "0.2"
# Pure-Rust ELF parser (zero runtime deps, zero `unsafe`, dual MIT/Apache).
# Used by host libc detection to read a system binary's `PT_INTERP` — the
# host's exact native loader path — for discovery-then-identify libc probing.
elf = "0.8"
junction = "2.0.0"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
] }

# Embedded Starlark interpreter for `ocx package test --script`.
#
# DELIBERATE EXACT PIN (deviation from this repo's caret-version convention):
# starlark-rust does NOT promise API stability between releases. Every bump is
# treated as a breaking change requiring a manual review pass (and re-running
# the engine-isolation test). The whole family is co-versioned and must move
# together. See .claude/rules/subsystem-deps.md "Manually-tracked exact pins".
starlark = "=0.13.0"
starlark_syntax = "=0.13.0"
starlark_map = "=0.13.0"
starlark_derive = "=0.13.0"
# Not a free choice: `allocative` is part of starlark's public API surface.
# `StarlarkValue` is a sealed trait whose supertrait bound is
# `allocative::Allocative`, so every host-allocated typed value must implement
# it against the SAME allocative version starlark 0.13.0 links from crates.io.
# Bump only together with the starlark family above.
allocative = "=0.3.4"

[workspace.lints.rust]
# Deny member-crate warnings via Cargo's lints table (Cargo 1.74+) rather than a
# blanket RUSTFLAGS=-D warnings in CI. RUSTFLAGS is global and also denies path
# dependencies — Cargo only auto-caps registry/git deps with `--cap-lints allow`,
# not path deps — which would turn the path-vendored forks' (oci-client,
# docker_credential) upstream lint warnings into hard build errors. This table
# applies to workspace members only (those with `lints.workspace = true`), so the
# forks compile capped while our crates stay warning-clean. CI's
# `setup-rust-toolchain` steps set `rustflags: ""` to defer denial to here, which
# also removes the prior local-vs-CI drift (local `cargo build` now denies too).
warnings = "deny"

[workspace.lints.clippy]
# Placeholder for future workspace-wide clippy overrides. Crate-specific
# overrides belong in each crate's own [lints.clippy] section so the
# scope is explicit. Kept empty so `[lints] workspace = true` in crate
# manifests continues to resolve.
