module(name = "rules_ocx")

bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1", dev_dependency = True)
