[package]
name = "ocx"
version.workspace = true
edition = "2024"
license.workspace = true
repository = "https://github.com/ocx-sh/ocx"

[[bin]]
name = "ocx"
path = "src/main.rs"

[dependencies]
ocx_lib = { workspace = true }

tokio = { workspace = true }

# NOTE: clap 4.5.55 (2026-01-27) introduced a regression in the
# `value_terminator("--") + last(true)` interaction; 4.5.57 (2026-02-03)
# fixed it. Floor set here to prevent pulling the broken versions when used
# by `ocx run`'s parser shape. Source: clap CHANGELOG.
clap = { version = ">=4.5.57, <5", features = ["derive", "color"] }
clap_complete = "4.6.2"
anyhow = "1.0.101"
tar = "0.4.45"
tempfile = "3"
lzma-rust2 = "0.16.0"
flate2 = "1.1.9"
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "std",
    "fmt",
    "json",
    "registry",
] }
tracing-log = "0.2.0"
serde = "1.0.228"
console = "0.16.2"
thiserror = "2"
rpassword = "7"
secrecy = "0.10"
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
