[package]
name = "ocx"
version.workspace = true
edition = "2024"
license.workspace = true
repository = "https://github.com/ocx-sh/ocx"

[[bin]]
name = "ocx"
path = "src/main.rs"

[features]
# Forwards `ocx_lib`'s internal-only test escape hatch. NEVER enable in
# release builds. See `ocx_lib`'s manifest for the full contract.
__testing = ["ocx_lib/__testing"]

[build-dependencies]
# vergen-gix bakes git + build metadata into the binary via `cargo:rustc-env`
# instructions emitted from `build.rs`. Used by `app::build_info` for the
# enriched `ocx version --verbose` and `ocx version --format json` output.
# Pure-Rust git via `gix` — no libgit2 / native dep. Note: `gix` is an
# unconditional dep of vergen-gix; the features list below controls which
# VERGEN_* vars are emitted, not whether `gix` compiles.
# Pinned exactly (`=9.1.0`) because this is a build-dep with ~31 transitive
# gix-family crates: a floating `^9.1` would let `cargo update` silently
# bump all of them without review.
vergen-gix = { version = "=9.1.0", default-features = false, features = ["build", "cargo", "rustc"] }

[dependencies]
ocx_lib.workspace = true

tokio.workspace = true
# NOTE: clap 4.5.55 (2026-01-27) introduced a regression in the
# `value_terminator("--") + last(true)` interaction; 4.5.57 (2026-02-03)
# fixed it. Floor in workspace prevents the broken versions.
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
tempfile.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
console.workspace = true
thiserror.workspace = true
which.workspace = true
secrecy.workspace = true
async-trait.workspace = true

[lints]
workspace = true
