[package]
name = "ocx_lib"
version.workspace = true
edition = "2024"
license.workspace = true
publish = false
exclude = ["src/test_data/**"]

[features]
# Internal-only escape hatch: gates test seams used by acceptance tests.
# Follows the Rust ecosystem `__name` convention (cf. axum `__private`,
# reqwest `__tls`) signalling "internal, no stability guarantee, do not
# enable from downstream code".
#
# Currently gates the `__OCX_SELF_IMAGE` env var seam that lets the
# canonical self-update identifier (`ocx.sh/ocx/cli`) be overridden so
# acceptance tests can exercise the install path against `localhost:5000`.
# A loopback-registry assert inside the gate prevents misuse even when the
# feature is enabled. Compile-gated out of release artifacts — release
# builds physically lack the code path.
__testing = []

[dependencies]
schemars.workspace = true
tokio.workspace = true

oci-client.workspace = true
lzma-rust2.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
indexmap.workspace = true
toml.workspace = true
flate2.workspace = true
tar.workspace = true
tempfile.workspace = true
serde_repr.workspace = true
serde_yaml_ng.workspace = true
bytes.workspace = true
futures.workspace = true
fs4.workspace = true
chrono.workspace = true
regex.workspace = true
async-trait.workspace = true
docker_credential.workspace = true
secrecy.workspace = true
base64.workspace = true
symlink.workspace = true
dunce.workspace = true
dirs.workspace = true
sysinfo.workspace = true
clap_builder.workspace = true
colored_json.workspace = true
console.workspace = true
clap_complete.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
which.workspace = true
zip.workspace = true
indicatif.workspace = true
thiserror.workspace = true
rpassword.workspace = true

# Embedded Starlark engine — exact-pinned family (see root Cargo.toml comment).
starlark.workspace = true
starlark_syntax.workspace = true
starlark_map.workspace = true
starlark_derive.workspace = true
# Sealed-trait supertrait of starlark's `StarlarkValue` (see root Cargo.toml).
# Host-allocated typed values (`OsValue`, `ArchValue`, `PlatformValue`,
# `RunResultValue`) implement `allocative::Allocative` directly.
allocative.workspace = true
# `anyhow` is the CLI-boundary error carrier: `cli::classify_error` takes an
# `&anyhow::Error` to map error chains to exit codes (the documented
# library/CLI boundary pattern in quality-rust-errors), and the `script`
# engine firewall uses it for the starlark evaluator boundary payload.
# ocx_lib's PUBLIC error API stays `thiserror` (`ScriptError` /
# `ScriptOutcomeKind`); anyhow never appears in a public structured-error type.
anyhow = "1"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
junction.workspace = true
windows-sys.workspace = true

[lints]
workspace = true
