[package]
name = "ocx_lib"
version.workspace = true
edition = "2024"
license.workspace = true
publish = false
exclude = ["src/test_data/**"]

[features]
# Internal-only escape hatch: gates test seams used by acceptance tests.
# Follows the Rust ecosystem `__name` convention (cf. axum `__private`,
# reqwest `__tls`) signalling "internal, no stability guarantee, do not
# enable from downstream code".
#
# Currently gates the `__OCX_SELF_IMAGE` env var seam that lets the
# canonical self-update identifier (`ocx.sh/ocx/cli`) be overridden so
# acceptance tests can exercise the install path against `localhost:5000`.
# A loopback-registry assert inside the gate prevents misuse even when the
# feature is enabled. Compile-gated out of release artifacts — release
# builds physically lack the code path.
__testing = []

[dependencies]
schemars.workspace = true
tokio.workspace = true

oci-client.workspace = true
lzma-rust2.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
indexmap.workspace = true
toml.workspace = true
flate2.workspace = true
zstd.workspace = true
tar.workspace = true
tempfile.workspace = true
serde_repr.workspace = true
serde_yaml_ng.workspace = true
bytes.workspace = true
futures.workspace = true
fs4.workspace = true
chrono.workspace = true
regex.workspace = true
async-trait.workspace = true
docker_credential.workspace = true
secrecy.workspace = true
base64.workspace = true
symlink.workspace = true
dunce.workspace = true
dirs.workspace = true
sysinfo.workspace = true
clap_builder.workspace = true
colored_json.workspace = true
console.workspace = true
clap_complete.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
which.workspace = true
zip.workspace = true
indicatif.workspace = true
thiserror.workspace = true
rpassword.workspace = true
# Async XZ/gzip decoding — streaming pull pipeline (Phase 3; see workspace Cargo.toml comment).
async-compression.workspace = true
# SyncIoBridge — AsyncRead → sync Read bridge at spawn_blocking boundary (Phase 3).
tokio-util.workspace = true

# Embedded Starlark engine — exact-pinned family (see root Cargo.toml comment).
starlark.workspace = true
starlark_syntax.workspace = true
starlark_map.workspace = true
starlark_derive.workspace = true
# Sealed-trait supertrait of starlark's `StarlarkValue` (see root Cargo.toml).
# Host-allocated typed values (`OsValue`, `ArchValue`, `PlatformValue`,
# `RunResultValue`) implement `allocative::Allocative` directly.
allocative.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
junction.workspace = true
windows-sys.workspace = true

[dev-dependencies]
# Test-only. `engine::classify` unit tests construct starlark `ErrorKind`
# variants to lock the variant -> outcome table; every variant field is an
# `anyhow::Error` (starlark_syntax 0.13 API), so the tests must name `anyhow` to
# build them. Kept out of `[dependencies]` on purpose: ocx_lib's runtime error
# surface is `thiserror` (quality-rust-errors.md), and a dev-dependency makes any
# runtime `use anyhow` a compile error. Placement locked by
# `script::dependency_hygiene_tests::anyhow_is_dev_dependency_only`.
anyhow.workspace = true

[lints]
workspace = true
