[package]
name = "ocx_shim"
version.workspace = true
edition = "2024"
license.workspace = true
repository = "https://github.com/ocx-sh/ocx"
# Internal blob (include_bytes!'d into ocx); not a release artifact.
publish = false

[[bin]]
name = "ocx-shim"
path = "src/main.rs"

[dependencies]

[target.'cfg(windows)'.dependencies]
# CreateProcessW's signature references Security::SECURITY_ATTRIBUTES;
# windows-sys gates each function behind the features of every type it
# mentions, so the Security feature is required to import CreateProcessW.
windows-sys.workspace = true
dunce.workspace = true

[lints]
workspace = true

# size profile
#
# The binary-size budget for the shim (opt-level="z", lto=true,
# codegen-units=1, panic="abort", strip="symbols") is NOT declared here:
# Cargo only honours `[profile.*]` tables at the workspace root, and adding
# a size-tuned release profile to the root `Cargo.toml` would change the
# release build of every workspace crate. The release-size budget for the
# committed shim blob is therefore governed by a dedicated build profile /
# CI job introduced in Phase 4 (see plan_windows_exe_shim.md §4.3-4.4).
# This crate carries only its package metadata in Phase 1 (stub).
