load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@rules_nodejs//nodejs:toolchain.bzl", "nodejs_toolchain")
load("@rules_ocx//ocx:defs.bzl", "ocx_launcher")

ocx_launcher(
    name = "nodejs_launcher",
    bin = "bin/node",
    package = "@nodejs",
)

nodejs_toolchain(
    name = "nodejs_config",
    node = ":nodejs_launcher",
)

toolchain(
    name = "nodejs",
    toolchain = ":nodejs_config",
    toolchain_type = "@rules_nodejs//nodejs:runtime_toolchain_type",
)

js_binary(
    name = "hello_world",

    # workaround to include package
    copy_data_to_bin = False,
    data = ["@nodejs"],
    entry_point = ":hello-world.js",
)
